--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,7 +100,6 @@
   --current-scheme: "orange";
 }
 
-
 /* Color scheme variations */
 [data-color-scheme="blue"] {
   --primary: #3B82F6;
@@ -163,10 +162,10 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
+  --primary: #ee7b46;
   --primary-foreground: oklch(0.205 0 0);
   --subtext: #8997AA;
-  --secondary: oklch(0.269 0 0);
+  --secondary: oklch(52.7% 0.154 150.069);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
@@ -193,15 +192,15 @@
   &[data-color-scheme="blue"] {
     --primary: #60A5FA; /* Lighter blue for dark mode */
   }
-  
+
   &[data-color-scheme="green"] {
     --primary: #34D399; /* Lighter green for dark mode */
   }
-  
+
   &[data-color-scheme="purple"] {
     --primary: #C084FC; /* Lighter purple for dark mode */
   }
-  
+
   &[data-color-scheme="orange"] {
     --primary: #FB923C; /* Lighter orange for dark mode */
   }
